fix: better z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99999999999999999999999;
+  z-index: 9999;
 
   div.titre {
     position: absolute;
